tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.kt:15:47: error: type mismatch: inferred type is Int but BigInteger! was expected
    if ((list.head).toBigInteger().compareTo((NULL)) == 0) {
                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.kt:19:54: error: type mismatch: inferred type is Int but BigInteger! was expected
    while ((nexts[last]!!).toBigInteger().compareTo((NULL)) != 0) {
                                                     ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.kt:51:47: error: type mismatch: inferred type is Int but BigInteger! was expected
    if ((list.head).toBigInteger().compareTo((NULL)) == 0) {
                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.kt:57:46: error: type mismatch: inferred type is Int but BigInteger! was expected
    while (((fast).toBigInteger().compareTo((NULL)) != 0) && ((nexts[fast]!!).toBigInteger().compareTo((NULL)) != 0)) {
                                             ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/floyds_cycle_detection.kt:57:105: error: type mismatch: inferred type is Int but BigInteger! was expected
    while (((fast).toBigInteger().compareTo((NULL)) != 0) && ((nexts[fast]!!).toBigInteger().compareTo((NULL)) != 0)) {
                                                                                                        ^
